Do not crash in --forms --add-list without column values

Be a bit more user friendly, and instead of crashing, add a default
column name if the user forgot to use --column-values with a --forms list.

https://bugzilla.gnome.org/show_bug.cgi?id=676406